Added a title page to the report

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1,5 +1,32 @@
 \documentclass{article}
+\usepackage{graphicx}
 
 \begin{document}
-Hello world
+
+\begin{titlepage}
+	\begin{center}
+		\vspace*{1cm}
+		\Huge
+		\textbf{Analyses of various algorithms}\\
+
+		\vspace{0.5cm}
+		\LARGE
+
+		Term paper for INF221 2021\\
+
+		\vspace{1.5cm}
+
+		\textit{Mats Hoem Olsen, Roy Erling Granheim, Sindre Stokke}\\
+
+		\vfill
+
+		\includegraphics[width=0.4\textwidth]{./tex/pic/logo.eps}\\
+		
+		\LARGE
+		DataSci\\
+		Norwegian university of life science\\
+		2021 December 3
+	\end{center}		
+\end{titlepage}
+
 \end{document}
