Added varince data, updated number of rounds, and number of iterations. Added a template to paper.

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1,5 +1,10 @@
 \documentclass{article}
+
+
+\usepackage{biblatex} % bibliografhy
 \usepackage{graphicx}
+
+\addbibresource{INF221.bib}
 
 \begin{document}
 
@@ -29,4 +34,35 @@
 	\end{center}		
 \end{titlepage}
 
+\tableofcontent
+\begin{abstract}
+algorithm goes brrrr.
+\end{abstract}
+\newpage
+
+\section{Introduction}
+
+Hi, we are students. How are you?
+
+\section{Theory}
+
+In this section we will discuss the different algorithms, and their pros, and cons.
+
+\section{Method used}
+
+In this section we will show our workflow and automation of tests.
+
+\section{Benchmarks}
+
+In this section we will analyse the performance of the different algorithms on exponentially growing test data.
+
+\section{Discussion}
+
+We will in this section discuss our findings, and thoughts\footnote{Although these thoughts are subjective, we will present them as facts. For our thoughts feel real to us.}
+
+\section{Acknowledgements}
+
+We acknowledge that we may, or may not be made out of bread.
+
+\printbibliography
 \end{document}
