la til ekstra mapper og fikk bilde importering til å fungere, men jeg skal fjerne det siden det blir for tungt. PDF er veien

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -51,6 +51,11 @@ Hi, we are students. How are you?\parencite[see][]{cormen_introduction_2009}
 \section{Method used}
 
 In this section we will show our workflow and automation of tests.\parencite[look at ][time: 1:23]{brady_haran_death_2020}
+\begin{figure}
+	\centering
+	\def\svgwidth{\columnwidth}
+	\input{pics/flower.pdf_tex}
+\end{figure}
 
 \section{Benchmarks}
 
