added script to generate diagrams as PDF, just need to generate data, and write teori.

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -53,8 +53,7 @@ Hi, we are students. How are you?\parencite[see][]{cormen_introduction_2009}
 In this section we will show our workflow and automation of tests.\parencite[look at ][time: 1:23]{brady_haran_death_2020}
 \begin{figure}
 	\centering
-	\def\svgwidth{\columnwidth}
-	\input{pics/flower.pdf_tex}
+	\includegraphics[]{./pics/flower.pdf}
 \end{figure}
 
 \section{Benchmarks}
