Added tikz, and tkz-berge

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -4,6 +4,14 @@
 \usepackage{biblatex} % bibliografhy
 \usepackage{graphicx}
 
+% added tikz, and a mysterius package... just to try out.
+\usepackage{tikz}
+\usepackage{tikz,fullpage}
+\usetikzlibrary{arrows,%
+                petri,%
+                topaths}%
+\usepackage{tkz-berge}
+
 \addbibresource{./tex/INF221.bib}
 
 \begin{document}
