Updated something.... Think it was test.py

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 
 
-\usepackage{biblatex} % bibliografhy
+\usepackage[style=authortitle]{biblatex} % bibliografhy
 \usepackage{graphicx}
 
 \addbibresource{./tex/INF221.bib}
