--- a/tex/INF221.bib
+++ b/tex/INF221.bib
@@ -1,49 +1,35 @@
 
-@video{brady_haran_death_2020,
-	title = {Death of The Lecture - Sixty Symbols},
-	url = {https://www.youtube.com/watch?v=vv1134PLylU},
-	abstract = {Is the traditional lecture dead? Professors Mike Merrifield and Phil Moriarty - both from the University of Nottingham - have differing views. More links and info below  ↓ ↓ ↓
-
-Phil Moriarty entire interview: https://youtu.be/{kzsF}6V-Frgo
-Mike Merrifield entire interview: https://youtu.be/{IuZD}5vwNRgI
-
-Mike Merrifield playlist: http://bit.ly/Merrifield\_Playlist
-Phil Moriarty Playlist: http://bit.ly/Prof\_Moriarty
-
-Read more from Phil: https://muircheartblog.wpcomstaging.c...
-
-Read more from Mike: https://blogs.nottingham.ac.uk/physic...
-
-Visit our website at http://www.sixtysymbols.com/
-We're on Facebook at http://www.facebook.com/sixtysymbols
-And Twitter at http://twitter.com/sixtysymbols
-This project features scientists from The University of Nottingham
-http://bit.ly/{NottsPhysics}
-
-Patreon: https://www.patreon.com/sixtysymbols
-
-Sixty Symbols videos by Brady Haran 
-
-Additional editing by James Hennessy
-http://www.bradyharanblog.com
-
-Email list: http://eepurl.com/{YdjL}9},
-	author = {{Professor Mike Merrifield} and {Professor Phil Moriarty}},
-	editora = {{Brady Haran}},
-	editoratype = {collaborator},
-	urldate = {2020-07-28},
-	date = {2020-07-28},
-	langid = {english}
-}
-
 @book{cormen_introduction_2009,
+	location = {{USA}},
+	edition = {3rd},
 	title = {Introduction to Algorithms},
 	isbn = {978-0-262-03384-8},
 	url = {https://books.google.no/books?id=aefUBQAAQBAJ},
 	series = {Computer science},
 	pagetotal = {1292},
 	publisher = {{McGraw}-Hill},
-	author = {Cormen, T.H. and Leiserson, C.E. and Rivest, R.L. and Stein, C.},
+	author = {Cormen, Thomas H. and Leiserson, Charles E. and Rivest, Ronald L. and Stein, Clifford},
 	date = {2009},
 	lccn = {2009008593}
+}
+
+@online{olsen_files_nodate,
+	title = {Files · main · Norwegian University of Life Sciences / emner / {INF}221 / {INF}221\_21 / Student Term Papers\_21 / Group22 / Omega\_paper},
+	url = {https://gitlab.com/nmbu.no/emner/inf221/INF221_2021/student-term-papers_21/group2128/omega_paper/-/tree/main},
+	abstract = {Code to the code gods!},
+	titleaddon = {{GitLab}},
+	author = {Olsen, Mats Hoem and Granheim, Roy Erling and Stokke, Sindre},
+	urldate = {2021-10-19},
+	langid = {english}
+}
+
+@online{olsen_conaltdeleteinf221termpaper2021_nodate,
+	title = {{ConAltDelete}/{INF}221TermPaper2021: Term Paper for {INF}221 2021},
+	url = {https://github.com/ConAltDelete/INF221TermPaper2021},
+	shorttitle = {{ConAltDelete}/{INF}221TermPaper2021},
+	abstract = {Term Paper for {INF}221 2021. Contribute to {ConAltDelete}/{INF}221TermPaper2021 development by creating an account on {GitHub}.},
+	titleaddon = {{GitHub}},
+	author = {Olsen, Mats Hoem and Stokke, Sindre and Granheim, Roy Erling},
+	urldate = {2021-10-19},
+	langid = {english}
 }
