--- a/tex/main.tex
+++ b/tex/main.tex
@@ -66,7 +66,7 @@ Hi, we are students. How are you?\parencite[see][]{cormen_introduction_2009}
 
 \section{Method used}
 
-In this section we will show our workflow and automation of tests.\parencite[look at ][time: 1:23]{brady_haran_death_2020}
+\input{./tex/methode.tex}
 
 \section{Benchmarks}
 
