--- a/tex/main.tex
+++ b/tex/main.tex
@@ -41,7 +41,7 @@
 
 		\vfill
 
-		\includegraphics[width=0.4\textwidth]{./tex/pic/logo.eps}\\
+		\includegraphics[width=0.4\textwidth]{./pic/logo.eps}\\
 		
 		\LARGE
 		DataSci\\
@@ -62,15 +62,15 @@ Hi, we are students. How are you?\parencite[see][]{cormen_introduction_2009}
 
 \section{Theory}\label{sec:theory}
 
-\input{./tex/algorithm_theory.tex}
+\input{algorithm_theory.tex}
 
 \section{Method used}
 
-\input{./tex/methode.tex}
+In this section we will show our workflow and automation of tests.\parencite[look at ][time: 1:23]{brady_haran_death_2020}
 
-\section{Benchmarks}
+\section{Results}
 
-In this section we will analyse the performance of the different algorithms on exponentially growing test data.
+\input{Results.tex}
 
 \section{Discussion}
 
