updated paths in main.tex

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -41,7 +41,7 @@
 
 		\vfill
 
-		\includegraphics[width=0.4\textwidth]{./pic/logo.eps}\\
+		\includegraphics[width=0.4\textwidth]{./tex/pic/logo.eps}\\
 		
 		\LARGE
 		DataSci\\
@@ -62,7 +62,7 @@ Hi, we are students. How are you?\parencite[see][]{cormen_introduction_2009}
 
 \section{Theory}\label{sec:theory}
 
-\input{algorithm_theory.tex}
+\input{./tex/algorithm_theory.tex}
 
 \section{Method used}
 
@@ -70,7 +70,7 @@ In this section we will show our workflow and automation of tests.\parencite[loo
 
 \section{Results}
 
-\input{Results.tex}
+\input{./tex/Results.tex}
 
 \section{Discussion}
 
