--- a/tex/algorithm_theory.tex
+++ b/tex/algorithm_theory.tex
@@ -26,10 +26,16 @@ Listing~\ref{lst:bubble_sort}. Best case runtime for this algorithm
 is
 
 \begin{equation}
-  T(n) = \Theta(n) \;.  \label{eq:ins_sort_best}
+  T(n) = \Theta(n) \;.  \label{eq:bub_sort_best}
 \end{equation}
 
-It is achieved for correctly sorted input data.
+It is achieved for correctly sorted input data. Worst case runtime for this algorithm is
+
+\begin{equation}
+  T(n) = O(n^2) \;.  \label{eq:bub_sort_worst}
+\end{equation}
+
+It is achieve for a reversed sorted input data. Bubblesort is in place and stable.
 
 \subsection{Algo 2: Insertion sort}\label{sec:algo2}
 
@@ -52,6 +58,7 @@ It is achieved for correctly sorted input data.
   \end{codebox}
 \end{algorithm}
 
+Insertion sort iterates through the list’s numbers from left to right, moving each number as far to the left as needed for there not to be any lower number to the left of it. It is an in-place algorithm that only stores one auxiliary variable called the key. This conatins the number that is being moved to the left and compared to it’s next.
 Pseudocode for the second algorithm is shown in
 Listing~\ref{lst:insertion_algo}. Best case runtime for this algorithm
 is
@@ -60,7 +67,13 @@ is
   T(n) = \Theta(n) \;.  \label{eq:ins_sort_best}
 \end{equation}
 
-It is achieved for correctly sorted input data.
+It is achieved for correctly sorted input data. Worst case runtime for this algorithm is
+
+\begin{equation}
+  T(n) = O(n^2) \;.  \label{eq:ins_sort_worst}
+\end{equation}
+
+It is achieve for a reversed sorted input data. Insertion sort is in place and stable. 
 
 \subsection{Algo 3: Quicksort}\label{sec:algo3}
 
@@ -95,80 +108,58 @@ It is achieved for correctly sorted input data.
   \end{codebox}
 \end{algorithm}
 
-Pseudocode for the second algorithm is shown in
-Listing~\ref{lst:partition}. Best case runtime for this algorithm
-is
+Quicksort is a “divide and conquer” algorithm.
+Pseudocode for the third algorithm is shown in
+Listing~\ref{lst:quicksort_algo} and~\ref{lst:partition}. Best case runtime for this algorithm is
 
 \begin{equation}
-  T(n) = \Theta(n) \;.  \label{eq:ins_sort_best}
+  T(n) = \Theta(n*log(n)) \;.  \label{eq:quick_sort_best}
 \end{equation}
 
-It is achieved for correctly sorted input data.
-
-\subsection{Algo 4: Quicksort Median of Three}\label{sec:algo4}
-
-\begin{algorithm}[H]
-  \caption{Quicksort median of three algorithm from \cite[Ch.~2.1]{cormen_introduction_2009}.}
-  \label{lst:quickmed3_algo}
-  \begin{codebox}
-    \Procname{$\proc{Insertion-Sort}(A)$}
-    \li \For $j \gets 2$ \To $\attrib{A}{length}$
-    \li \Do
-    $\id{key} \gets A[j]$
-    \li     $i \gets j-1$
-    \li      \While $i>0$ and $A[i] > \id{key}$
-    \li      \Do
-    $A[i+1] \gets A[i]$
-    \li         $i \gets i-1$
-    \End    
-    \li       $A[i+1]\gets \id{key}$
-    \End
-  \end{codebox}
-\end{algorithm}
-
-Pseudocode for the second algorithm is shown in
-Listing~\ref{lst:quickmed3_algo}. Best case runtime for this algorithm
-is
+It is achieved for where it chooses pivot always in the middle and average case for when the array is random. Worst case runtime for this algorithm is
 
 \begin{equation}
-  T(n) = \Theta(n) \;.  \label{eq:ins_sort_best}
+  T(n) = O(n^2) \;.  \label{eq:quick_sort_worst}
 \end{equation}
 
-It is achieved for correctly sorted input data.
+It is achieved for when the input data is both reversed sorted and sorted.
 
-\subsection{Algo 5: Quicksort Insertion sort hybrid}\label{sec:algo5}
+\subsection{Algo 4: Quicksort Insertion sort hybrid}\label{sec:algo4}
 
 \begin{algorithm}[H]
-  \caption{Insertion sort algorithm from \cite[Ch.~2.1]{cormen_introduction_2009}.}
+  \caption{Quicksort insertion sort hybrid from GeeksforGeeks advanced algorithm}
   \label{lst:quickinsert_algo}
   \begin{codebox}
-    \Procname{$\proc{Insertion-Sort}(A)$}
-    \li \For $j \gets 2$ \To $\attrib{A}{length}$
-    \li \Do
-    $\id{key} \gets A[j]$
-    \li     $i \gets j-1$
-    \li      \While $i>0$ and $A[i] > \id{key}$
-    \li      \Do
-    $A[i+1] \gets A[i]$
-    \li         $i \gets i-1$
-    \End    
-    \li       $A[i+1]\gets \id{key}$
+    \Procname{$\proc{QuickInsertion-Sort}(A, p, r)$}
+    \li \While $p<r$
+    \li	\Do \If $r-p+1<10$
+    \li		\Do $\proc{Insertion-Sort(A})$
+    \li			End loop
+    \li 	\Else
+    \li			$x \gets \proc{Partition}(A, p, r)$
+    \li 	\If $x-p<r-x$
+    \li		\Do $\proc{QuickInsertion-Sort}(A, p, x-1)$
+    \li 	$p \gets x+1$
+    \li 	\Else
+    \li 	$\proc{QuickInsertion-Sort}(A, x+1, r)$
+    \li 	$r \gets x-1$
+    \End
+    \End
     \End
   \end{codebox}
 \end{algorithm}
 
-Pseudocode for the second algorithm is shown in
+Pseudocode for the fourth algorithm is shown in
 Listing~\ref{lst:quickinsert_algo}. Best case runtime for this algorithm
 is
 
 \begin{equation}
-  T(n) = \Theta(n) \;.  \label{eq:ins_sort_best}
+  T(n) = \Theta(n) \;.  \label{eq:quick_sort_best}
 \end{equation}
 
 It is achieved for correctly sorted input data.
 
-\subsection{Algo 6: Mergesort}\label{sec:algo6}
-why are you like this
+\subsection{Algo 5: Mergesort}\label{sec:algo5}
 
 \begin{algorithm}[H]
   \caption{Mergesort algorithm from \cite[Ch.~2.1]{cormen_introduction_2009}.}
@@ -213,38 +204,54 @@ why are you like this
   \end{codebox}
 \end{algorithm}
 
-Pseudocode for the second algorithm is shown in
-Listing~\ref{lst:merge}. Best case runtime for this algorithm
-is
+Pseudocode for the fifth algorithm is shown in
+Listing~\ref{lst:merge}. The runtime for this algorithm in all cases is
 
 \begin{equation}
-  T(n) = \Theta(n) \;.  \label{eq:ins_sort_best}
+  T(n) = \Theta(n*log(n)) \;.  \label{eq:ins_sort_best}
 \end{equation}
 
-It is achieved for correctly sorted input data.
-
-\subsection{Algo 7: Mergesort Insertion sort hybrid}\label{sec:algo7}
+\subsection{Algo 6: Mergesort Insertion sort hybrid}\label{sec:algo6}
 
 \begin{algorithm}[H]
-  \caption{Insertion sort algorithm from \cite[Ch.~2.1]{cormen_introduction_2009}.}
+  \caption{Mergesort Insertion sort hybrid from GeeksforGeeks timsort}
   \label{lst:mergeinsert_algo}
   \begin{codebox}
-    \Procname{$\proc{Insertion-Sort}(A)$}
-    \li \For $j \gets 2$ \To $\attrib{A}{length}$
-    \li \Do
-    $\id{key} \gets A[j]$
-    \li     $i \gets j-1$
-    \li      \While $i>0$ and $A[i] > \id{key}$
-    \li      \Do
-    $A[i+1] \gets A[i]$
-    \li         $i \gets i-1$
-    \End    
-    \li       $A[i+1]\gets \id{key}$
+    \Procname{$\proc{MergeInsertion-Sort}(A)$}
+    \li $minrun \gets 32$
+    \li \For $s \gets 0$ \To $\attrib{A}{length}$ \By $minrun$
+    \li \Do $e \gets$ lesser~of $s+minrun-1$ and $\attrib{A}{length}-1$
+    \li		$\proc{Insertion-Sort}(A, s, e)$
     \End
+    \li $size \gets minrun$
+    \li \While $h<\attrib{A}{length}$
+    \li \Do \For $p \gets 0$ \To $\attrib{A}{length}$ \By $2*size$
+    \li 	\Do $q \gets$ lesser~of $\attrib{A}{length}-1$ and $p+size-1$
+    \li			$r \gets$ lesser~of $p+2*size-1$ and $\attrib{A}{length}-1$
+    \li			\If $q<r$
+    \li 		\Do $\proc{Merge}(A, p, q, r)$
+    \End
+    \End
+    \li 	$size \gets 2*size$
+    \End		
   \end{codebox}
 \end{algorithm}
 
-Pseudocode for the second algorithm is shown in
+\begin{algorithm}[H]
+  \caption{Insertion sort from GeeksforGeeks timsort}
+  \label{lst:insert_algo}
+  \begin{codebox}
+    \Procname{$\proc{Insertion-Sort}(A, p, r)$}
+    \li \For $i \gets p+1$ \To $r+1$
+    \li \Do $j \gets i$
+    \li 	\While $j>p$ and $A[j]<A[j-1]$
+    \li		\Do exchange $A[j]$ with $A[j-1]$
+    \End
+    \End		
+  \end{codebox}
+\end{algorithm}
+
+Pseudocode for the sixth algorithm is shown in
 Listing~\ref{lst:mergeinsert_algo}. Best case runtime for this algorithm
 is
 
@@ -254,22 +261,10 @@ is
 
 It is achieved for correctly sorted input data.
 
-\subsection{Algo 8: Python sort}\label{sec:algo8}
+\subsection{Algo 7: Python sort}\label{sec:algo7}
 
-Best case runtime for this algorithm is
+Built in sorting algorithm standard in the python programming language
 
-\begin{equation}
-  T(n) = \Theta(n) \;.  \label{eq:ins_sort_best}
-\end{equation}
+\subsection{Algo 8: Numpy sort}\label{sec:algo8}
 
-It is achieved for correctly sorted input data.
-
-\subsection{Algo 9: Numpy sort}\label{sec:algo9}
-
-Best case runtime for this algorithm is
-
-\begin{equation}
-  T(n) = \Theta(n) \;.  \label{eq:ins_sort_best}
-\end{equation}
-
-It is achieved for correctly sorted input data.
+Built in sorting algortihm from Numpy a python package.
