--- a/tex/main.tex
+++ b/tex/main.tex
@@ -3,6 +3,8 @@
 
 \usepackage[style=authortitle]{biblatex} % bibliografhy
 \usepackage{graphicx}
+\usepackage{caption}
+\usepackage{subcaption}
 
 % added tikz, and a mysterius package... just to try out.
 \usepackage{tikz}
