updated abstract  and instroduction

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -52,14 +52,13 @@
 
 \tableofcontents
 \begin{abstract}
-algorithm goes brrrr.
+There exist many algorithms used for sorting data, some better than others for small or big types of data. This paper will go through many different algorithms and test them to see which is faster depending on size, complexity and sortedness. We will benchmark by using identically randomly generated data.
 \end{abstract}
 \newpage
 
 \section{Introduction}
 
-Hi, we are students. How are you?\parencite[see][]{cormen_introduction_2009}
-
+\input{./tex/introduction.tex}
 \section{Theory}\label{sec:theory}
 
 \input{./tex/algorithm_theory.tex}
