Results og opprettet disciussions-filen

--- a/tex/Results.tex
+++ b/tex/Results.tex
@@ -1,5 +1,7 @@
 
 Bubble sort results:
+From the plot we can see that the average running time on the unsorted data and the reverse order data both follow the same curve. Although the running time on the reverse sorted data is a little bit slower.
+The average running time on the sorted data is way less and also follows a less steep curve.
 
 \begin{figure}[H]
 	\centering
@@ -22,9 +24,10 @@ Bubble sort results:
 	\end{subfigure}
 \end{figure}
 
-[Bubble sort results description]
+
 
 Insertion sort results:
+As we can se from the plots, the sorted order takes much way less time on average than the random order and reverse order.
 
 \begin{figure}[H]
 	\centering
@@ -47,9 +50,10 @@ Insertion sort results:
 	\end{subfigure}
 \end{figure}
 
-[Insertion sort results description]
-
 Quicksort results:
+From the plot we can see that the average running time on sorted data and the reverse order data both follow the same curve. Although the running time on the sorted data is a little bit slower than the reverse sorted.
+The average running time on the unsorted data is way less and also follows a less steep curve.
+
 
 \begin{figure}[H]
 	\centering
@@ -72,9 +76,8 @@ Quicksort results:
 	\end{subfigure}
 \end{figure}
 
-[Quicksort results description]
-
 Quicksort Insertion sort hybrid results:
+The Quicksort insertion sort hybrid outperformes both quicksort and insertionsort on the unsorted data and the reverse sorted data. In fact, on the unsorted data, it is the best performing algorithm of all tested. On the sorted data it is beaten by insertionsort though.
 
 \begin{figure}[H]
 	\centering
@@ -97,9 +100,9 @@ Quicksort Insertion sort hybrid results:
 	\end{subfigure}
 \end{figure}
 
-[Quicksort Insertion sort hybrid results description]
 
 Mergesort results:
+Both the unsorted data, the sorted and the reverse sorted follows the same curve for the average running time. The unsorted data hade the shortest running time, followed by the reverse ordered and the ordered data.
 
 \begin{figure}[H]
 	\centering
@@ -122,9 +125,8 @@ Mergesort results:
 	\end{subfigure}
 \end{figure}
 
-[Mergesort results description]
-
 Mergesort Insertion sort hybrid results:
+The mergesort insertionsort hybrid outperformed mergesort slightly on the unsorted data and significantly on the reverse sorted data. It took way longer time than insertionsort though.
 
 \begin{figure}[H]
 	\centering
@@ -147,9 +149,8 @@ Mergesort Insertion sort hybrid results:
 	\end{subfigure}
 \end{figure}
 
-[Mergesort Insertion sort hybrid results description]
-
 Python sort results:
+Pythonsort is the best performing algorithm on the reverse sorted data, of all tested.
 
 \begin{figure}[H]
 	\centering
@@ -172,7 +173,6 @@ Python sort results:
 	\end{subfigure}
 \end{figure}
 
-[Python sort results description]
 
 Numpy sort results:
 
@@ -196,5 +196,3 @@ Numpy sort results:
 		\caption{numpy sort sorted data}
 	\end{subfigure}
 \end{figure}
-
-[Numpy sort results description]
