--- a/tex/main.tex
+++ b/tex/main.tex
@@ -75,7 +75,7 @@ In this section we will show our workflow and automation of tests.\parencite[loo
 
 \section{Discussion}
 
-We will in this section discuss our findings, and thoughts\footnote{Although these thoughts are subjective, we will present them as facts. For our thoughts feel real to us.}
+\input{./tex/Discussion.tex}
 
 \section{Acknowledgements}
 
